--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <a class="nav-link bg-primary active text-white" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="about.html">About Us</a>
+                <a class="nav-link text-white" href="aboutus.html">About Us</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-white" href="contact.html">Contact Us</a>
