--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,7 @@
   <!DOCTYPE html>
   <html lang="en">
   <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
       <link rel="stylesheet" href="css/bootstrap.min.css">
       <link rel="stylesheet" href="css/style.css">
       <link rel="icon" href="images/icon.png.png" type="image/png">
@@ -10,7 +11,7 @@
   </head>
   <body>
     <!--Navbar-->
-    <nav class="navbar navbar-expand-lg bg-dark">
+    <nav class="navbar navbar-expand-lg position-fixed top-0 z-3 w-100">
       <div class="container-fluid">
         <a class="navbar-brand text-white" href="index.html">DreamArt</a>
         <button class="navbar-toggler bg-primary " type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,7 +34,7 @@
       </div>
     </nav>
       <!--Contact-->
-      <div class="container">
+      <div class="container pt-5 mt-3">
       <div class="row">
         
 
@@ -67,7 +68,7 @@
 
         </div>
         <div class="col-12 col-md-6">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2996.542577702783!2d19.814776729360055!3d41.318813597684375!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x13503102ab42934d%3A0xe5f2c33360986d74!2sLuxury%20Hotel%20%26%20Spa%20in%20Tirana%20-%20Xheko%20Imperial!5e0!3m2!1ssq!2s!4v1732552092952!5m2!1ssq!2s" width="450" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d95868.06946251879!2d19.735420785931296!3d41.33328421966207!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ssq!2s!4v1733136709980!5m2!1ssq!2s" width="450" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
 
 
@@ -108,6 +109,12 @@
   <!-- Footer -->
 <footer class="bg-dark text-white text-center py-3 pb-1">
   <p>&copy; 2024 DreamArt. All Rights Reserved.</p>
+  <div class="icona">
+    <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram px-2 text-white"></i></a>
+  <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook px-2 text-white"></i></a>
+  <a href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-youtube px-2 text-white"></i></a>
+  <a href="https://mail.google.com/" target="_blank"><i class="fa-solid fa-envelope px-2 text-white"></i></a>
+</div>
 </footer>
 
 
@@ -115,5 +122,6 @@
       
   <script src="js/bootstrap.min.js"></script>
   <script src="js/contact.js"></script>
+  <script src="js/script.js"></script>
   </body>
   </html>
